# kuakua-agent

./: .gitignore  CLAUDE.md  PROJECT_DOC.md  README.md  backend.spec  kuakua_agent.db  project_structure.txt  pyproject.toml
data/: fish_audio_voices.json
data/phone_usage/: 1aa3757210535b67_2026-04-25.json  1aa3757210535b67_2026-04-26.json  1aa3757210535b67_2026-04-28.json  _idempotency.json  android_mi_001_2026-04-25.json  dev123_2026-04-27.json  dev999_2026-04-27.json  smoke-dev-001_2026-04-28.json
desktop/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: code-review-p1-features.md
docs/contracts/: phone_usage_sync_protocol_v1.json
electron/: package.json  vite.config.ts
kuakua_agent/: __init__.py  config.py  main.py
kuakua_agent/api/: __init__.py  activitywatch_proxy_routes.py  app.py  errors.py  phone_routes.py  routes.py  usage_summary_routes.py
kuakua_agent/core/: __init__.py  errors.py  logging.py  tracing.py
kuakua_agent/schemas/: chat.py  common.py  integration.py  nightly_summary.py  phone_usage.py  praise.py  settings.py  summary.py
kuakua_agent/services/: chat_service.py  nightly_summary_scheduler.py  phone_usage_service.py  settings_service.py  summary_service.py  weather.py  websocket_manager.py
kuakua_agent/utils/: __init__.py  atomic_write.py  (+1 more)
phone_stats_sync/: README.md  build.gradle  gradle.properties  gradlew.bat  local.properties  settings.gradle
scripts/: fish_audio_voices.py  smoke_phone_sync.py  test_kokoro_tts.py
tools/: activitywatch_lan_proxy.py
(+265 files in other folders)
