[project]
name = "kuakua-agent-backend"
version = "0.1.0"
description = "Backend API scaffold for Kuakua Agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic-settings>=2.2,<3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

